[project]
name = "road-vision-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Yerdos",email = "qop6261@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
